# virtpad

./: PRIVACY.md  README.md  README_RU.md
app/: AndroidManifest.xml  app.pde  event.pde  ui.pde
daemon/: CMakeLists.txt
daemon/deb/: 90-uinputd-restart  90-uinputd.rules  postinst  postrm  prerm  uinputd.service
daemon/src/: Server.cpp  Server.h  ServerTask.cpp  ServerTask.h  main.cpp  settings.h
